--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 * {
     box-sizing: border-box;
 }
 
 body {
+    font-family: Inter, sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -27,7 +30,6 @@ body {
 
 .header__logo h1 {
     margin: 0;
-    font-family: Inter, sans-serif;
     font-size: 24px;
     font-weight: 700;
     line-height: 29px;
@@ -35,14 +37,12 @@ body {
 
 .header__logo p {
     margin: 0;
-    font-family: Inter, sans-serif;
     font-size: 12px;
     font-weight: 300;
     line-height: 15px;
 }
 
 .header__controls a {
-    font-family: Inter, sans-serif;
     font-size: 14px;
     font-weight: 400;
     line-height: 17px;
@@ -93,11 +93,14 @@ body {
     background-color: rgb(255, 73, 73);
     border: none;
     color: white;
-    font-family: Inter, sans-serif;
     font-size: 14px;
     font-weight: 400;
     line-height: 17px;
     cursor: pointer;
+}
+
+.content {
+    margin-bottom: 94px;
 }
 
 .content__box {
@@ -112,21 +115,138 @@ body {
     margin-top: 0;
     margin-bottom: 25px;
     color: rgb(0, 0, 0);
-    font-family: Inter, sans-serif;
     font-size: 24px;
     font-weight: 500;
     line-height: 29px;
 }
 .content__cards {
     display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 30px;
 }
 
 .content__cards__item {
-    width: calc(100% / 3);
+    width: calc((100% - 60px) / 3);
+    display: block;
+    height: 100%;
+
+}
+
+.content__cards__item__img {
+    display: block;
+    width: 100%;
+    margin-bottom: 12px;
+}
+
+.content__cards__item__title {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 4px;
+    margin: 0;
+    font-size: 16px;
+    line-height: 19px;
+    margin-bottom: 4px;
+}
+
+.content__cards__item__title h4 {
+    font-weight: 700;
+    margin: 0;
+}
+
+.content__cards__item__title span {
+    font-weight: 400;
+}
+
+.content__cards__item__description {
+    color: rgb(134, 134, 134);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19px;
+    margin-top: 0;
+    margin-bottom: 11px;
+    margin: 0;
+}
+.content__cards__item__pating {
+    color: rgb(4, 163, 30);
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 19px;
+    margin: 0;
 }
 
 .content__sidebar {
     width: 262px;
+    min-width: 262px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.content__sidebar__info {
+    margin-bottom: 120px;
+}
+
+.content__sidebar__info--title {
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 19px;
+    margin-top: 0;
+    margin-bottom: 28px;
+}
+.content__sidebar__info__wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.content__sidebar__info__item {
+    display: flex;
+    flex-direction: column;
+    font-size: 14px;
+    line-height: 17px;
+}
+
+.content__sidebar__info__item h5 {
+    font-weight: 700;
+    margin-top: 0;
+    margin-bottom: 5px;
+}
+
+.content__sidebar__info__item p {
+    font-weight: 400;
+    margin: 0;
+}
+
+.content__sidebar__footer {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.content__sidebar__footer p {
+    margin: 0;
+    color: rgb(170, 170, 170);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px
+}
+
+.content__sidebar__footer a {
+    color: rgb(170, 170, 170);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px;
+}
+
+.content__sidebar__footer a:hover {
+    color: rgb(255, 73, 73);
+}
+
+@media (max-width: 991px) {
+    .content__cards__item {
+        width: calc((100% - 30px) / 2);
+    }
 }
 
 @media (max-width: 768px) {
@@ -144,5 +264,12 @@ body {
     }
     .content__sidebar {
         width: 100%;
+    }
+}
+
+@media (max-width: 480px) {
+    .content__cards__item {
+        width: 100%;
+        min-width: 100%;
     }
 }
