--- a/netkliks-app/src/styles.css
+++ b/netkliks-app/src/styles.css
@@ -1,1 +1,377 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Inter, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    max-width: 1194px;
+    margin: 0 auto;
+    padding-left: 24px;
+    padding-right: 24px;
+}
+
+.header {
+    margin-top: 34px;
+    margin-bottom: 15px;
+}
+
+.header__box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header__logo h1 {
+    margin: 0;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 29px;
+}
+
+.header__logo p {
+    margin: 0;
+    font-size: 12px;
+    font-weight: 300;
+    line-height: 15px;
+}
+
+.header__controls a {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px;
+    text-decoration: none;
+    color: black;
+}
+
+.header__controls a:hover {
+    color: rgb(255, 73, 73);
+}
+
+.header__controls__mobile {
+    display: none;
+    align-self: flex-start;
+}
+
+.search {
+    margin-bottom: 39px;
+}
+
+.search__box {
+    border-radius: 5px;
+    background: rgb(255, 73, 73);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 3px;
+    gap: 3px;
+    height: 50px;
+}
+
+.search__box input {
+    flex-grow: 1;
+    height: 100%;
+    border: none;
+    outline: none;
+    border-radius: 3px;
+    background: rgb(255, 255, 255);
+    padding: 0 30px;
+    min-width: 0;
+}
+
+.search__box button {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    background-color: rgb(255, 73, 73);
+    border: none;
+    color: white;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px;
+    cursor: pointer;
+}
+
+.content {
+    margin-bottom: 94px;
+}
+
+.content__box {
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+}
+.content__main {
+    flex-grow: 1;
+}
+
+.content__main__title {
+    margin-top: 0;
+    margin-bottom: 25px;
+    color: rgb(0, 0, 0);
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 29px;
+}
+.content__cards {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 30px;
+}
+
+.content__cards__item {
+    width: calc((100% - 60px) / 3);
+    display: block;
+    height: 100%;
+    text-decoration: none;
+}
+
+.content__cards__item__img {
+    display: block;
+    width: 100%;
+    margin-bottom: 12px;
+}
+
+.content__cards__item__title {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 4px;
+    margin: 0;
+    font-size: 16px;
+    line-height: 19px;
+    margin-bottom: 4px;
+    color:black;
+}
+
+.content__cards__item__title h4 {
+    font-weight: 700;
+    margin: 0;
+}
+
+.content__cards__item__title span {
+    font-weight: 400;
+}
+
+.content__cards__item__description {
+    color: rgb(134, 134, 134);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19px;
+    margin-top: 0;
+    margin-bottom: 11px;
+    margin: 0;
+}
+.content__cards__item__pating {
+    color: rgb(4, 163, 30);
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 19px;
+    margin: 0;
+}
+
+.content__sidebar {
+    width: 262px;
+    min-width: 262px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.content__sidebar__info {
+    margin-bottom: 120px;
+}
+
+.content__sidebar__info--title {
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 19px;
+    margin-top: 0;
+    margin-bottom: 28px;
+}
+.content__sidebar__info__wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.content__sidebar__info__item {
+    display: flex;
+    flex-direction: column;
+    font-size: 14px;
+    line-height: 17px;
+}
+
+.content__sidebar__info__item h5 {
+    font-weight: 700;
+    margin-top: 0;
+    margin-bottom: 5px;
+}
+
+.content__sidebar__info__item p {
+    font-weight: 400;
+    margin: 0;
+}
+
+.content__sidebar__footer {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.content__sidebar__footer p {
+    margin: 0;
+    color: rgb(170, 170, 170);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px
+}
+
+.content__sidebar__footer a {
+    color: rgb(170, 170, 170);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px;
+}
+
+.content__sidebar__footer a:hover {
+    color: rgb(255, 73, 73);
+}
+
+.content__movie {
+    flex-grow: 1;
+    display: flex;
+    justify-content: space-between;
+    gap: 28px;
+}
+
+.content__movie__img {
+    width: calc((100% - 28px) / 2);
+    display: flex;
+    justify-content: center;
+}
+
+.content__movie__img img {
+    width: 100%;
+    display: block;
+    max-width: 450px;
+}
+
+.content__movie__info {
+    width: calc((100% - 28px) / 2);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 30px;
+}
+
+.content__content__movie__info__title {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 4px;
+    margin-bottom: 3px;
+}
+
+.content__movie__info__title h1 {
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 29px;
+    margin: 0;
+}
+
+.content__movie__info__title p {
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 29px;
+    margin: 0;
+}
+
+.content__movie__info__description {
+    color: rgb(134, 134, 134);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19px;
+    margin-bottom: 2px;
+    margin-top: 0;
+}
+
+.content__movie__info__rating {
+    color: rgb(4, 163, 30);
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 19px;
+    margin-top: 0;
+    margin-bottom: 29px;
+}
+
+.content__movie__info__text {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px;
+    margin-top: 0;
+    margin-bottom: 18px;
+}
+
+.content__movie__info__content > *:last-child {
+    margin-bottom: 0;
+}
+
+.content__movie__info__controls button {
+    border-radius: 5px;
+    background: rgb(255, 73, 73);   
+    color: rgb(255, 255, 255);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px;
+    padding: 16px 98px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+
+@media (max-width: 991px) {
+    .content__cards__item {
+        width: calc((100% - 30px) / 2);
+    }
+    .content__movie {
+        flex-direction: column;
+    }
+    .content__movie__img {
+        width: 100%;
+    }
+    .content__movie__info {
+        width: 100%;
+    }
+}
+
+@media (max-width: 768px) {
+    .header__controls {
+        display: none;
+    }
+    .header__controls__mobile {
+        display: block;
+    }
+    .search__box input {
+        padding: 0 15px;
+    }
+    .content__box {
+        flex-direction: column;
+    }
+    .content__sidebar {
+        width: 100%;
+    }
+}
+
+@media (max-width: 480px) {
+    .content__cards__item {
+        width: 100%;
+        min-width: 100%;
+    }
+}
