Все как в видео

--- a/netkliks-app/src/app/components/card/card.component.html
+++ b/netkliks-app/src/app/components/card/card.component.html
@@ -3,7 +3,7 @@
         <img src="./img/movie.png" alt="Карточка фильма">
     </div>
     <div class="content__cards__item__title">
-        <h4>Марсианин,</h4>
+        <h4>{{title}},</h4>
         <span>The Martian 2015</span>
     </div>
     <p class="content__cards__item__description">Фантастика, приключения</p>
