--- a/netkliks-app/src/app/app.component.html
+++ b/netkliks-app/src/app/app.component.html
@@ -7,12 +7,9 @@
               <div class="content__main">
                   <h2 class="content__main__title">Результаты поиска</h2>
                   <div class="content__cards">
-                    <app-card title="Марсианин 1"></app-card>
-                    <app-card title="Марсианин 2"></app-card>
-                    <app-card title="Марсианин 3"></app-card>
-                    <app-card title="Марсианин 4"></app-card>
-                    <app-card title="Марсианин 5"></app-card>
-                    <app-card title="Марсианин 6"></app-card>
+                    @for (movie of movies; track movie.id) {
+                    <app-card [mov] = "movie"></app-card>
+                    }
                   </div>
               </div>
                   <app-sidebar></app-sidebar>
