--- a/netkliks-app/src/app/components/card/card.component.html
+++ b/netkliks-app/src/app/components/card/card.component.html
@@ -1,4 +1,4 @@
-<a [href]="mov.link" class="content__cards__item">
+<a [routerLink]="['/film', mov.id]" class="content__cards__item">
     <div class="content__cards__item__img">
         <img [src]="mov.image" alt="Карточка фильма">
     </div>
