--- a/netkliks-app/src/app/app.component.html
+++ b/netkliks-app/src/app/app.component.html
@@ -1,19 +1,5 @@
 <app-header></app-header>
 <main>
   <app-search></app-search>
-  <section class="content">
-      <div class="container">
-          <div class="content__box">
-              <div class="content__main">
-                  <h2 class="content__main__title">Результаты поиска</h2>
-                  <div class="content__cards">
-                    @for (movie of movies; track movie.id) {
-                    <app-card [mov] = "movie"></app-card>
-                    }
-                  </div>
-              </div>
-                  <app-sidebar></app-sidebar>
-          </div>
-      </div>
-  </section>
+  <router-outlet></router-outlet>
 </main>
