--- a/netkliks-app/src/app/components/header/header.component.html
+++ b/netkliks-app/src/app/components/header/header.component.html
@@ -1,10 +1,10 @@
 <header class="header">
     <div class="container">
         <div class="header__box">
-            <div class="header__logo">
+            <a routerLink="/" class="header__logo">
                 <h1>NETKLIKS</h1>
                 <p>всё о сериалах</p>
-            </div>
+            </a>
             <div class="header__controls">
                 <a href="#">Вход и регистрация</a>
             </div>
